# courses-scraper

./: .gitignore  README.md  pyproject.toml  readme.md  requirements.txt  scraper.py
app/: __main__.py  constants.py
