[tool.poetry]
name = "courses-scraper"
version = "0.1.0"
description = ""
authors = ["Delemangi <milev.stefan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.0"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.1.14"
pre-commit = "^3.6.0"
pandas-stubs = "^2.1.4.231227"
types-tqdm = "^4.66.0.20240106"
types-beautifulsoup4 = "^4.12.0.20240106"
types-requests = "^2.31.0.20240106"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

[tool.ruff]
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # mccabe
    "C90",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-2020
    "YTT",
    # flake8-annotations
    "ANN",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-quotes
    "Q",
    # flake8-pie
    "PIE",
    # flake8-pyi
    "PYI",
    # flake8-return
    "RET",
    # flake8-simplify
    "SIM",
    # flake8-unused-arguments
    "ARG",
    # flake8-use-pathlib
    "PTH",
    # pylint
    "PL",
    # ruff
    "RUF",
]
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
