[project]
name = "courses-scraper"
version = "0.1.0"
description = "Courses Scraper"
readme = "README.md"
requires-python = "~=3.13"
dependencies = [
    "requests>=2.32.3,<3",
    "beautifulsoup4>=4.13.0,<5",
    "pandas>=2.2.3,<3",
    "tqdm>=4.67.1,<5",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1,<2",
    "ruff>=0.9.4,<1",
    "pandas-stubs>=2.2.3.241126,<3",
    "types-tqdm>=4.67.0.20241221,<5",
    "types-beautifulsoup4>=4.12.0.20241020,<5",
    "types-requests>=2.32.0.20241016,<3",
]

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "B",
    "COM",
    "C4",
    "DTZ",
    "FA",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "PTH",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "PERF",
    "FURB",
    "LOG",
    "RUF",
]
ignore = ["PLR2004", "PLR0912", "PLR0915", "TRY003", "PLR0911", "RET504"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
